@@ -852,10 +852,11 @@ class LuaContext {
       hero_api_freeze,
       hero_api_unfreeze,
       hero_api_walk,
+      hero_api_start_attack,
+      hero_api_start_item,
       hero_api_start_jumping,
       hero_api_start_treasure,
       hero_api_start_victory,
-      hero_api_start_item,
       hero_api_start_boomerang,
       hero_api_start_bow,
       hero_api_start_hookshot,
