@@ -29,6 +29,7 @@ set(lua_test_maps
   "bugs/810_hero_disappears_after_scrolling/1"
   "bugs/817_entity_set_enabled_overlapping_hero"
   "bugs/818_sprite_get_num_frames"
+  "bugs/821_hero_start_attack"
   "bugs/823_sprite_get_size_origin"
 )
 
