@@ -1,0 +1,87 @@
+animation{
+  name = "sword",
+  src_image = "hero/sword.sword1.png",
+  frame_delay = 30,
+  directions = {
+    { x = 0, y = 0, frame_width = 72, frame_height = 72, origin_x = 36, origin_y = 43, num_frames = 12 },
+    { x = 0, y = 72, frame_width = 72, frame_height = 72, origin_x = 36, origin_y = 43, num_frames = 12 },
+    { x = 0, y = 144, frame_width = 72, frame_height = 72, origin_x = 36, origin_y = 43, num_frames = 12 },
+    { x = 0, y = 216, frame_width = 72, frame_height = 72, origin_x = 36, origin_y = 43, num_frames = 12 },
+  },
+}
+
+animation{
+  name = "sword_loading_stopped",
+  src_image = "hero/loading.sword1.png",
+  directions = {
+    { x = 0, y = 0, frame_width = 40, frame_height = 40, origin_x = 20, origin_y = 27 },
+    { x = 0, y = 40, frame_width = 40, frame_height = 40, origin_x = 20, origin_y = 27 },
+    { x = 0, y = 80, frame_width = 40, frame_height = 40, origin_x = 20, origin_y = 27 },
+    { x = 0, y = 120, frame_width = 40, frame_height = 40, origin_x = 20, origin_y = 27 },
+  },
+}
+
+animation{
+  name = "sword_loading_walking",
+  src_image = "hero/loading.sword1.png",
+  frame_delay = 100,
+  frame_to_loop_on = 0,
+  directions = {
+    { x = 0, y = 0, frame_width = 40, frame_height = 40, origin_x = 20, origin_y = 27, num_frames = 6 },
+    { x = 0, y = 40, frame_width = 40, frame_height = 40, origin_x = 20, origin_y = 27, num_frames = 6 },
+    { x = 0, y = 80, frame_width = 40, frame_height = 40, origin_x = 20, origin_y = 27, num_frames = 6 },
+    { x = 0, y = 120, frame_width = 40, frame_height = 40, origin_x = 20, origin_y = 27, num_frames = 6 },
+  },
+}
+
+animation{
+  name = "sword_tapping",
+  src_image = "hero/sword_tapping.sword.png",
+  frame_delay = 40,
+  frame_to_loop_on = 1,
+  directions = {
+    { x = 0, y = 0, frame_width = 40, frame_height = 24, origin_x = 12, origin_y = 21, num_frames = 7 },
+    { x = 0, y = 24, frame_width = 24, frame_height = 40, origin_x = 12, origin_y = 37, num_frames = 7 },
+    { x = 0, y = 64, frame_width = 40, frame_height = 24, origin_x = 28, origin_y = 21, num_frames = 7 },
+    { x = 0, y = 88, frame_width = 24, frame_height = 40, origin_x = 12, origin_y = 21, num_frames = 7 },
+  },
+}
+
+animation{
+  name = "spin_attack",
+  src_image = "hero/spin_attack.sword1.png",
+  frame_delay = 30,
+  directions = {
+    { x = 0, y = 0, frame_width = 64, frame_height = 64, origin_x = 32, origin_y = 39, num_frames = 30, num_columns = 15 },
+    { x = 0, y = 128, frame_width = 64, frame_height = 64, origin_x = 32, origin_y = 39, num_frames = 30, num_columns = 15 },
+    { x = 0, y = 256, frame_width = 64, frame_height = 64, origin_x = 32, origin_y = 39, num_frames = 30, num_columns = 15 },
+    { x = 0, y = 384, frame_width = 64, frame_height = 64, origin_x = 32, origin_y = 39, num_frames = 30, num_columns = 15 },
+  },
+}
+
+animation{
+  name = "super_spin_attack",
+  src_image = "hero/spin_attack.sword1.png",
+  frame_delay = 30,
+  frame_to_loop_on = 5,
+  directions = {
+    { x = 0, y = 0, frame_width = 64, frame_height = 64, origin_x = 32, origin_y = 39, num_frames = 22, num_columns = 15 },
+    { x = 0, y = 128, frame_width = 64, frame_height = 64, origin_x = 32, origin_y = 39, num_frames = 22, num_columns = 15 },
+    { x = 0, y = 256, frame_width = 64, frame_height = 64, origin_x = 32, origin_y = 39, num_frames = 22, num_columns = 15 },
+    { x = 0, y = 384, frame_width = 64, frame_height = 64, origin_x = 32, origin_y = 39, num_frames = 22, num_columns = 15 },
+  },
+}
+
+animation{
+  name = "victory",
+  src_image = "hero/victory.sword.png",
+  frame_delay = 50,
+  frame_to_loop_on = 17,
+  directions = {
+    { x = 0, y = 0, frame_width = 64, frame_height = 64, origin_x = 32, origin_y = 39, num_frames = 18, num_columns = 9 },
+    { x = 0, y = 0, frame_width = 64, frame_height = 64, origin_x = 32, origin_y = 39, num_frames = 18, num_columns = 9 },
+    { x = 0, y = 0, frame_width = 64, frame_height = 64, origin_x = 32, origin_y = 39, num_frames = 18, num_columns = 9 },
+    { x = 0, y = 0, frame_width = 64, frame_height = 64, origin_x = 32, origin_y = 39, num_frames = 18, num_columns = 9 },
+  },
+}
+
