@@ -55,6 +55,7 @@ Changes that do not introduce incompatibilities:
 * entity:overlaps() now has an optional collision mode parameter (#748).
 * Add entity:get_sprite() to all entities, with an optional name value (#669).
 * enemy/custom_entity:create_sprite() now take an optional name value.
+* Add a method hero:start_attack() (#821).
 * Add methods chest:get/set_treasure() (#664).
 * Add methods dynamic_tile:get_pattern_id() and get_modified_ground() (#755).
 * Add a method block:get_sprite().
